Fix alignment of select menus.

--- a/src/visiomatic/client/css/visiomatic.css
+++ b/src/visiomatic/client/css/visiomatic.css
@@ -142,6 +142,7 @@ a {
 
 .visiomatic-control-label {
 	padding-right: 4px;
+	padding-top: 2px;
 	display: table-cell;
 	vertical-align: middle;
 }
@@ -284,8 +285,8 @@ select.visiomatic-control-select {
 	background-color: var(--input-background-color);
 	color: var(--input-color);
 	vertical-align: top;
-	margin: 2px 0px 0px 0px;
-	padding: 4px 4px;
+	margin: 2px 0px 2px 4px;
+	padding: -2px 0px 4px 0px;
 	border-width: 0px;
 	box-shadow: 1px 1px 2px var(--shadow-color) inset;
 	border-radius: 0px;
